# stagewise-gt-tools

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  algo_bench.hpp  bench.cpp  bench.hpp  cc_bench.cpp  cc_bench.hpp  check_recall.cpp  compute_gt.cpp  concurrent_bench.hpp  crop.cpp  fvecs_to_bin.cpp  index.hpp  utils.hpp
.github/workflows/: format.yaml
algorithms/: base.hpp  hnsw.hpp
bench/: CMakeLists.txt  go.mod  go.sum  index.go  main.go  run.sh  run_all.sh  utils.go
bench/algorithms/: index.hpp  index_cgo.cpp  index_cgo.hpp
bench/algorithms/hnsw/: hnsw.hpp  hnsw_stat.hpp
bench/algorithms/parlayann/: parlay_hnsw.hpp  parlay_vamana.hpp
bench/algorithms/vamana/: vamana.hpp
bench/config/: config.yaml
bench/config/hnsw/: sift_b1000_w10_t48.yaml  sift_b1000_w20_t48.yaml  sift_b1000_w50_t48.yaml  sift_b1000_w80_t48.yaml  sift_b1000_w90_t48.yaml  sift_b100_w10_t48.yaml  sift_b100_w20_t48.yaml  sift_b100_w50_t16.yaml  sift_b100_w50_t48.yaml  sift_b100_w80_t48.yaml  sift_b100_w90_t48.yaml  sift_b200_w10_t48.yaml  sift_b200_w20_t48.yaml  sift_b200_w50_t48.yaml  sift_b200_w80_t48.yaml  sift_b200_w90_t48.yaml  sift_b500_w10_t48.yaml  sift_b500_w20_t48.yaml  sift_b500_w50_t48.yaml  sift_b500_w80_t48.yaml  sift_b500_w90_t48.yaml
bench/config/parlay_hnsw/: sift_b1000_w10_t48.yaml  sift_b1000_w20_t48.yaml  sift_b1000_w50_t48.yaml  sift_b1000_w80_t48.yaml  sift_b1000_w90_t48.yaml  sift_b100_w10_t48.yaml  sift_b100_w20_t48.yaml  sift_b100_w50_t16.yaml  sift_b100_w50_t48.yaml  sift_b100_w80_t48.yaml  sift_b100_w90_t48.yaml  sift_b200_w10_t48.yaml  sift_b200_w20_t48.yaml  sift_b200_w50_t48.yaml  sift_b200_w80_t48.yaml  sift_b200_w90_t48.yaml  sift_b500_w10_t48.yaml  sift_b500_w20_t48.yaml  sift_b500_w50_t48.yaml  sift_b500_w80_t48.yaml  sift_b500_w90_t48.yaml
bench/config/parlay_vamana/: sift_b1000_w10_t48.yaml  sift_b1000_w20_t48.yaml  sift_b1000_w50_t48.yaml  sift_b1000_w80_t48.yaml  sift_b100_w10_t48.yaml  sift_b100_w20_t48.yaml  sift_b100_w50_t48.yaml  sift_b100_w80_t48.yaml  sift_b200_w20_t48.yaml  sift_b200_w50_t48.yaml  sift_b200_w80_t48.yaml  sift_b200_w90_t48.yaml  sift_b500_w10_t48.yaml  sift_b500_w20_t48.yaml  sift_b500_w50_t48.yaml  sift_b500_w80_t48.yaml
bench/config/vamana/: sift_b1000_w20_t48.yaml  sift_b1000_w50_t48.yaml  sift_b1000_w80_t48.yaml  sift_b1000_w90_t48.yaml  sift_b100_w10_t48.yaml  sift_b100_w20_t48.yaml  sift_b100_w50_t48.yaml  sift_b100_w80_t48.yaml  sift_b200_w10_t48.yaml  sift_b200_w20_t48.yaml  sift_b200_w50_t48.yaml  sift_b200_w80_t48.yaml  sift_b500_w10_t48.yaml  sift_b500_w20_t48.yaml  sift_b500_w50_t48.yaml  sift_b500_w80_t48.yaml
bench/internal/: index.go  utils.go
bench/result/: benchmark_results.csv
data/: compute_gt.py  download.py  fvecs_to_bin.py
plot/: batch100.csv  batch1000.csv  batch200.csv  batch500.csv  plot.py
utils/: CMakeLists.txt  calc_incr_recall.cpp  calc_recall.cpp  calculate_recall.cpp  check_recall.cpp  compute_gt.cpp  compute_gt.sh  compute_incr_gt.cpp  crop.cpp  utils.hpp
utils/scripts/: compute_gt.sh
